# super-alice-protocol

./: .gitignore  CMakeLists.txt  README.md
cmake/: AliceProtocolConfig.cmake.in
docs/: INTRODUCTION.adoc
include/alice/: alice.hpp  encryption_manager.hpp  error_handler.hpp  logger.hpp  node.hpp  packet.hpp  peer.hpp  peer_bootstrap_node.hpp  peer_edge_node.hpp  peer_satellite_node.hpp  router.hpp
include/alice/device_meta/: device_ip_table.hpp  device_type_table.hpp  eci_position_calculator.hpp  orbital_parameters.hpp  peer_enums.hpp  position_table.hpp
include/alice/position_service/: position_broadcaster.hpp  position_notifier.hpp
scripts/: edge2.zsh  run_demo.sh  sat2.zsh  start_bootstrap.zsh  start_edge.zsh  start_satellite.zsh  stop_demo.sh
src/: CMakeLists.txt  encryption_manager.cpp  error_handler.cpp  logger.cpp  main.cpp  node.cpp  packet.cpp  peer.cpp  peer_bootstrap_node.cpp  peer_edge_node.cpp  peer_satellite_node.cpp  router.cpp
src/device_meta/: device_ip_table.cpp  device_type_table.cpp  eci_position_calculator.cpp  position_table.cpp
src/position_service/: position_broadcaster.cpp  position_notifier.cpp
test/: test_discovery.cpp  test_encryption_manager.cpp  test_example.cpp  test_iptable.cpp  test_main.cpp  test_packet.cpp
